Fixes grid alignment for trend descriptions

--- a/style.css
+++ b/style.css
@@ -105,7 +105,16 @@ body{
     padding: 5px;
     margin-right: 5px;
     border-radius: 50%;
-    background-color: #e6e6e6;
+    background-color: #fcd34d;
+}
+
+.cat-icon{
+    width: 20px;
+    height: 20px;
+    padding: 2px;
+    margin-right: 5px;
+    border-radius: 50%;
+    background-color: #fcd34d;
 }
 
 .user-info {
@@ -296,4 +305,15 @@ body{
 .trend-title {
     margin: 0px;
     padding: 0px;
+}
+
+.trend .description{
+    grid-column: 1/3;
+    margin: 0px;
+    margin-bottom: 10px;
+    padding: 0px;
+    padding-left: 10px;
+    font-size: 14px;
+    color: #4b5563;
+    font-weight: lighter;
 }
